--- a/Exercise2/习题解答.md
+++ b/Exercise2/习题解答.md
@@ -1,12 +1,13 @@
 # 习题解答
+[TOC]
 
-2-1 
+## 2-1 
 答：C++ 语言的主要特点表现在两个方面，一是全面兼容 C，二是支持面向对象的方法。C++ 是一个更好的 C，它保持了 C 的简洁、高效、接近汇编语言、具有良好的可读性和可移植性等特点，对 C 的类型系统进行了改革和扩充，因此 C++ 比 C 更安全，C++ 的编译系统能检查出更多的类型错误。C++ 语言最重要的特点是支持面向对象。
 
-2-2
+## 2-2
 Program, _lock, test2, A_B_C_D 是合法的标识符。
 
-2-3
+## 2-3
 ```c++
 #include <iostream>  // 指示编译器将文件 iostream 中的代码嵌入到该程序中该指令所在的地方
 using namespace std; // 使用标准 std 名字空间
@@ -18,13 +19,13 @@ int main(void)                         // 主函数名
     return 0;                          // 主程序结束，返回 0
 }
 ```
-2-4
+## 2-4
 ```c++
 const float PI = 3.1416;
 float a = PI;
 ```
 
-2-5
+## 2-5
 
 ```c
 enum COLOR {WHITE, BLACK = 100, RED, BLUE, GREEN = 300};
@@ -32,13 +33,13 @@ enum COLOR {WHITE, BLACK = 100, RED, BLUE, GREEN = 300};
 BLUE = 102
 ```
 
-2-6
+## 2-6
 注释在程序中的作用是对程序进行注解和说明，以便于阅读。编译系统在对源程序进行编译时不理会注释部分，因此注释对于程序的功能实现不起任何作用。而且由于编译时忽略注释部分，所以注释内容不会增加最终产生的可执行程序的大小。适当地使用注释，能够提高程序的可读性。
 
-2-7
+## 2-7
 任何一个用于计算值的公式都可称为表达式，x = 5 + 7 是一个表达式，它的值为 12。
 
-2-8
+## 2-8
 ```c++
 #include <iostream>
 using namespace std;
@@ -58,7 +59,7 @@ int main(void)
 }
 ```
 
-2-9
+## 2-9
 
 ```c++
 #include <iostream>
@@ -77,10 +78,10 @@ int main(void)
     return 0;
 }
 ```
-2-10
+## 2-10
 在 `for` 循环设置条件的第一个 “;” 前，用 “,” 分隔不同的赋值表达式。
 
-2-11
+## 2-11
 ```c++
 #include <iostream>
 using namespace std;
@@ -99,7 +100,7 @@ int main(void)
 n = 100
 ```
 
-2-12
+## 2-12
 ```c++
 // for
 #include <iostream>
@@ -152,10 +153,10 @@ int main(void)
     return 0;
 }
 ```
-2-13
+## 2-13
 语句 `if (x = 3)` 把 3 赋给 x，赋值表达式的值为 true，作为 if 语句的条件；语句 `if (x == 3)` 首先判断 x 的值是否为 3，若相等条件表达式的值为 true，否则为 false。
 
-2-14
+## 2-14
 
 ```c++
 if (x > y)
@@ -164,7 +165,7 @@ else
     y = x;
 ```
 
-2-15
+## 2-15
 ```c++
 #include <iostream>
 using namespace std;
@@ -179,7 +180,7 @@ int main(void)
     return 0;
 }
 ```
-2-16
+## 2-16
 ```c++
 #include <iostream>
 using namespace std;
@@ -193,7 +194,7 @@ int main(void)
     return 0;
 }
 ```
-2-17
+## 2-17
 ```c++
 #include <iostream>
 using namespace std;
@@ -211,7 +212,7 @@ int main(void)
 }
 ```
 
-2-18
+## 2-18
 ```c++
 // 打印 ASCII 码为 32 - 127 的字符
 #include <iostream>
@@ -227,7 +228,7 @@ int main(void)
 }
 ```
 
-2-19
+## 2-19
 ```c++
 #include <iostream>
 using namespace std;
@@ -244,7 +245,7 @@ int main(void)
     return 0;
 }
 ```
-2-20
+## 2-20
 ```c++
 #include <iostream>
 using namespace std;
@@ -273,4 +274,494 @@ int main(void)
 }
 ```
 
-2-21
+## 2-21
+所谓常量是指在程序运行的整个过程中其值始终不可改变的量，除了用文字表示常量外，也可以为常量命名，这就是符号常量；在程序的执行过程中可以变化的量称为变量，变量是需要用名字来标识的。
+
+## 2-22
+`auto` 存储类型：采用堆栈方式分配内存空间，属于一时性存储，其存储空间可以被若干变量多次覆盖使用。
+`register` 存储类型：存放在通用寄存器中。
+`extern` 存储类型：在所有函数和程序段中都可引用。
+`static` 存储类型：在内存中是以固定地址存放的，在整个程序运行期间都有效。
+
+## 2-23
+1. `2 < 3 && 6 < 9` true
+2. `!(4 < 7)` false
+3. `!(3 > 5) || (6 < 2)` true
+
+## 2-24
+* -1
+* 1
+* 3
+* 3
+
+
+## 2-25
+- 1
+- -1
+- 0
+- 0
+
+## 2-26
+```c++
+#include <cstdlib>
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    char flag;
+    while (1)
+    {
+        cout << "现在正在下雨吗？(Y or N)";
+        cin >> flag;
+        if (toupper(flag) == 'Y')
+        {
+            cout << "现在正在下雨。";
+            break;
+        }
+        if (toupper(flag) == 'N')
+        {
+            cout << "现在没有下雨。";
+            break;
+        }
+        cout << endl;
+    }
+
+    return 0;
+}
+```
+
+## 2-27
+```c++
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    int i, score;
+    cout << "你考试考了多少分？(0 ~ 100): ";
+    cin >> score;
+    if (score > 100 || score < 0)
+    {
+        cout << "分数值必须在 0 到 100 之间.";
+    }
+    else
+    {
+        i = score / 10;
+        switch (i)
+        {
+        case 10:
+        case 9:
+            cout << "你的成绩为优!";
+            break;
+        case 8:
+            cout << "你的成绩为良!";
+            break;
+        case 7:
+        case 6:
+            cout << "你的成绩为中!";
+            break;
+        default:
+            cout << "你的成绩为差!";
+        }
+    }
+
+    return 0;
+}
+```
+
+## 2-28
+a
+```c++
+#include <cstdlib>
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    char choice, c;
+    while (1)
+    {
+        cout << "Menu: A(dd) D(elete) S(ort) Q(uit), select one: ";
+        cin >> c;
+        choice = toupper(c);
+        if (choice == 'A')
+        {
+            cout << "数据已经增加." << endl;
+            continue;
+        }
+        else if (choice == 'D')
+        {
+            cout << "数据已经删除." << endl;
+            continue;
+        }
+        else if (choice == 'S')
+        {
+            cout << "数据已经排序." << endl;
+            continue;
+        }
+        else if (choice == 'Q')
+        {
+            break;
+        }
+        return 0;
+    }
+}
+```
+b
+```c++
+#include <cstdlib>
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    char choice;
+    while (1)
+    {
+        cout << "Menu: A(dd) D(elete) S(ort) Q(uit), select one: ";
+        cin >> choice;
+        switch (toupper(choice))
+        {
+        case 'A':
+            cout << "数据已经增加." << endl;
+            break;
+        case 'D':
+            cout << "数据已经删除." << endl;
+            break;
+        case 'S':
+            cout << "数据已经排序." << endl;
+            break;
+        case 'Q':
+            exit(0);
+            break;
+        default:;
+        }
+    }
+    return 0;
+}
+```
+
+## 2-29
+```c++
+//while
+#include <cmath>
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    int i, j, k, flag;
+    i = 2;
+    while (i <= 100)
+    {
+        flag = 1;
+        k = sqrt(i);
+        j = 2;
+        while (j <= k)
+        {
+            if (i % j == 0)
+            {
+                flag = 0;
+                break;
+            }
+            j++;
+        }
+        if (flag)
+        {
+            cout << i << "是质数." << endl;
+        }
+        i++;
+    }
+    return 0;
+}
+```
+```c++
+//do-while
+#include <cmath>
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    int i, j, k, flag;
+    i = 2;
+    do
+    {
+        flag = 1;
+        k = sqrt(i);
+        j = 2;
+        do
+        {
+            if (i % j == 0)
+            {
+                flag = 0;
+                break;
+            }
+            j++;
+        } while (j <= k);
+        if (flag)
+        {
+            cout << i << "是质数." << endl;
+        }
+        i++;
+    } while (i <= 100);
+    return 0;
+}
+```
+```c++
+// for
+#include <cmath>
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    int i, j, k, flag;
+    for (i = 2; i <= 100; i++)
+    {
+        flag = 1;
+        k = sqrt(i);
+        for (j = 2; j <= k; j++)
+        {
+            if (i % j == 0)
+            {
+                flag = 0;
+                break;
+            }
+        }
+        if (flag)
+        {
+            cout << i << "是质数." << endl;
+        }
+    }
+    return 0;
+}
+```
+## 2-30
+break 使程序从循环体和 `switch` 语句内跳出，继续执行逻辑上的下一条语句，不能用在别处。
+continue 语句结束本次循环，接着开始判定是否继续执行下一次循环。
+
+## 2-31
+```c++
+#include <iostream>
+using namespace std;
+
+struct Time
+{
+    int year;
+    int month;
+    int day;
+    int hour;
+    int minute;
+    int second;
+} t;
+
+int main(void)
+{
+    cout << "Please enter time(yyyy-mm-dd-hh-mm-ss):";
+    cin >> t.year;
+    cin >> t.month;
+    cin >> t.day;
+    cin >> t.hour;
+    cin >> t.minute;
+    cin >> t.second;
+    cout << "The time is:" << endl;
+    cout << t.year << "-" << t.month << "-" << t.day << " " << t.hour << ":" << t.minute << ":" << t.second << endl;
+
+    return 0;
+}
+```
+
+## 2-32
+```c++
+// while 语句
+#include <iostream>
+using namespace std;
+const int n = 18;
+
+int main(void)
+{
+    int m = 0;
+    while (m != n)
+    {
+        cout << "请猜这个数的值是为多少?(0 ~ 100): ";
+        cin >> m;
+        if (n > m)
+            cout << "你猜的值太小了!" << endl;
+        else if (n < m)
+            cout << "你猜的值太大了!" << endl;
+        else
+            cout << "你猜对了!" << endl;
+    }
+    return 0;
+}
+```
+
+```c++
+// do while
+#include <iostream>
+using namespace std;
+const int n = 18;
+
+int main(void)
+{
+    int m = 0;
+    do
+    {
+        cout << "请猜这个数的值是为多少?(0 ~ 100): ";
+        cin >> m;
+        if (n > m)
+            cout << "你猜的值太小了!" << endl;
+        else if (n < m)
+            cout << "你猜的值太大了!" << endl;
+        else
+            cout << "你猜对了!" << endl;
+    } while (n != m);
+    return 0;
+}
+```
+
+## 2-33
+```c++
+#include <iostream>
+using namespace std;
+
+enum Weekday
+{
+    SUNDAY,
+    MONDAY,
+    TUESDAY,
+    WEDNESDAY,
+    THURSDAY,
+    FRIDAY,
+    SATURDAY
+};
+
+int main(void)
+{
+    int i;
+    Weekday d = THURSDAY;
+    cout << "d=" << d << endl;
+    i = d;
+    cout << "i=" << i << endl;
+
+    d = (Weekday)6;
+    cout << "d=" << d << endl;
+    d = Weekday(4);
+    cout << "d=" << d << endl;
+    return 0;
+}
+```
+## 2-34
+```c++
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    enum color
+    {
+        red,
+        yellow,
+        blue,
+        white,
+        black
+    };
+    enum color pri;
+    int n, loop, i, j, k;
+    char c;
+    n = 0;
+    for (i = red; i <= black; i++)
+    {
+        for (j = red; j <= black; j++)
+        {
+            if (i != j)
+            {
+                for (k = red; k <= black; k++)
+                {
+                    if ((k != i) && (k != j))
+                    {
+                        n = n + 1;
+                        cout.width(4);
+                        cout << n;
+
+                        for (loop = 1; loop <= 3; loop++)
+                        {
+                            switch (loop)
+                            {
+                            case 1:
+                                pri = (enum color)i;
+                                break;
+                            case 2:
+                                pri = (enum color)j;
+                                break;
+                            case 3:
+                                pri = (enum color)k;
+                                break;
+                            default:
+                                break;
+                            }
+
+                            switch (pri)
+                            {
+                            case red:
+                                cout << "   red";
+                                break;
+                            case yellow:
+                                cout << "   yellow";
+                                break;
+                            case blue:
+                                cout << "   blue";
+                                break;
+                            case white:
+                                cout << "   white";
+                                break;
+                            case black:
+                                cout << "   black";
+                            default:
+                                break;
+                            }
+                        }
+                        cout << endl;
+                    }
+                }
+            }
+        }
+        cout << "Total:" << n << endl;
+    }
+    return 0;
+}
+```
+
+## 2-35
+九九乘法表
+```c++
+#include <iomanip>
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    int i, j;
+    cout << ' ';
+    for (i = 1; i < 10; i++)
+    {
+        cout << setw(4) << i;
+    }
+    cout << endl;
+    for (i = 1; i < 10; i++)
+    {
+        cout << i;
+        for (j = 1; j < 10; j++)
+        {
+            cout << setw(4) << (i * j);
+        }
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+## 2-36
+有符号整数在计算机内是以二进制补码形式存储的，其最高位为符号位，“0” 表示“正”，“1” 表示 “负“。无符号整数只能是正数，在计算机内是以绝对值形式存放的。
