--- a/Exercise2/习题解答.md
+++ b/Exercise2/习题解答.md
@@ -25,21 +25,22 @@ const float PI = 3.1416;
 float a = PI;
 ```
 
-## 2-5
+<!-- ## 2-5
 
 ```c
 enum COLOR {WHITE, BLACK = 100, RED, BLUE, GREEN = 300};
 
 BLUE = 102
-```
+第 4 版中的习题
+``` -->
 
-## 2-6
+## 2-5
 注释在程序中的作用是对程序进行注解和说明，以便于阅读。编译系统在对源程序进行编译时不理会注释部分，因此注释对于程序的功能实现不起任何作用。而且由于编译时忽略注释部分，所以注释内容不会增加最终产生的可执行程序的大小。适当地使用注释，能够提高程序的可读性。
 
-## 2-7
+## 2-6
 任何一个用于计算值的公式都可称为表达式，x = 5 + 7 是一个表达式，它的值为 12。
 
-## 2-8
+## 2-7
 ```c++
 #include <iostream>
 using namespace std;
@@ -59,7 +60,7 @@ int main(void)
 }
 ```
 
-## 2-9
+## 2-8
 
 ```c++
 #include <iostream>
@@ -78,10 +79,10 @@ int main(void)
     return 0;
 }
 ```
-## 2-10
+## 2-9
 在 `for` 循环设置条件的第一个 “;” 前，用 “,” 分隔不同的赋值表达式。
 
-## 2-11
+## 2-10
 ```c++
 #include <iostream>
 using namespace std;
@@ -100,7 +101,7 @@ int main(void)
 n = 100
 ```
 
-## 2-12
+## 2-11
 ```c++
 // for
 #include <iostream>
@@ -153,10 +154,10 @@ int main(void)
     return 0;
 }
 ```
-## 2-13
+## 2-12
 语句 `if (x = 3)` 把 3 赋给 x，赋值表达式的值为 true，作为 if 语句的条件；语句 `if (x == 3)` 首先判断 x 的值是否为 3，若相等条件表达式的值为 true，否则为 false。
 
-## 2-14
+## 2-13
 
 ```c++
 if (x > y)
@@ -165,7 +166,7 @@ else
     y = x;
 ```
 
-## 2-15
+## 2-14
 ```c++
 #include <iostream>
 using namespace std;
@@ -180,7 +181,7 @@ int main(void)
     return 0;
 }
 ```
-## 2-16
+## 2-15
 ```c++
 #include <iostream>
 using namespace std;
@@ -194,7 +195,7 @@ int main(void)
     return 0;
 }
 ```
-## 2-17
+## 2-16
 ```c++
 #include <iostream>
 using namespace std;
@@ -212,7 +213,7 @@ int main(void)
 }
 ```
 
-## 2-18
+## 2-17
 ```c++
 // 打印 ASCII 码为 32 - 127 的字符
 #include <iostream>
@@ -228,7 +229,7 @@ int main(void)
 }
 ```
 
-## 2-19
+## 2-18
 ```c++
 #include <iostream>
 using namespace std;
@@ -245,7 +246,7 @@ int main(void)
     return 0;
 }
 ```
-## 2-20
+## 2-19
 ```c++
 #include <iostream>
 using namespace std;
@@ -274,34 +275,35 @@ int main(void)
 }
 ```
 
-## 2-21
+## 2-20
 所谓常量是指在程序运行的整个过程中其值始终不可改变的量，除了用文字表示常量外，也可以为常量命名，这就是符号常量；在程序的执行过程中可以变化的量称为变量，变量是需要用名字来标识的。
-
+<!-- 
 ## 2-22
 `auto` 存储类型：采用堆栈方式分配内存空间，属于一时性存储，其存储空间可以被若干变量多次覆盖使用。
 `register` 存储类型：存放在通用寄存器中。
 `extern` 存储类型：在所有函数和程序段中都可引用。
-`static` 存储类型：在内存中是以固定地址存放的，在整个程序运行期间都有效。
+`static` 存储类型：在内存中是以固定地址存放的，在整个程序运行期间都有效。 
+第 4 版 22 题-->
 
-## 2-23
+## 2-21
 1. `2 < 3 && 6 < 9` true
 2. `!(4 < 7)` false
 3. `!(3 > 5) || (6 < 2)` true
 
-## 2-24
+## 2-22
 * -1
 * 1
 * 3
 * 3
 
 
-## 2-25
+## 2-23
 - 1
 - -1
 - 0
 - 0
 
-## 2-26
+## 2-24
 ```c++
 #include <cstdlib>
 #include <iostream>
@@ -331,7 +333,7 @@ int main(void)
 }
 ```
 
-## 2-27
+## 2-25
 ```c++
 #include <iostream>
 using namespace std;
@@ -370,7 +372,7 @@ int main(void)
 }
 ```
 
-## 2-28
+## 2-26
 a
 ```c++
 #include <cstdlib>
@@ -442,7 +444,7 @@ int main(void)
 }
 ```
 
-## 2-29
+## 2-27
 ```c++
 //while
 #include <cmath>
@@ -538,11 +540,11 @@ int main(void)
     return 0;
 }
 ```
-## 2-30
+## 2-28
 break 使程序从循环体和 `switch` 语句内跳出，继续执行逻辑上的下一条语句，不能用在别处。
 continue 语句结束本次循环，接着开始判定是否继续执行下一次循环。
 
-## 2-31
+<!-- ## 2-31
 ```c++
 #include <iostream>
 using namespace std;
@@ -571,9 +573,9 @@ int main(void)
 
     return 0;
 }
-```
+```  第 4 版 31 题-->
 
-## 2-32
+## 2-29
 ```c++
 // while 语句
 #include <iostream>
@@ -622,7 +624,7 @@ int main(void)
 }
 ```
 
-## 2-33
+<!-- ## 2-33
 ```c++
 #include <iostream>
 using namespace std;
@@ -652,8 +654,8 @@ int main(void)
     cout << "d=" << d << endl;
     return 0;
 }
-```
-## 2-34
+``` 第 4 版 33 题 -->
+## 2-30
 ```c++
 #include <iostream>
 using namespace std;
@@ -734,7 +736,7 @@ int main(void)
 }
 ```
 
-## 2-35
+## 2-31
 九九乘法表
 ```c++
 #include <iomanip>
@@ -763,5 +765,5 @@ int main(void)
 }
 ```
 
-## 2-36
+## 2-32
 有符号整数在计算机内是以二进制补码形式存储的，其最高位为符号位，“0” 表示“正”，“1” 表示 “负“。无符号整数只能是正数，在计算机内是以绝对值形式存放的。
